unpackaged/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>These are interests supplied by FL Trends.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>