unpackaged/main/default/objects/Lead/fields/Convert_from_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Convert_from_Pardot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers flow to autoconvert lead to Contact, Account and Opp. Should be set automatically by Pardot</description>
    <label>Convert from Pardot</label>
    <type>Checkbox</type>
</CustomField>