unpackaged/main/default/objects/Lead/fields/Grad_Year__c.field-meta.xml
<CustomField>
    <fullName>Grad_Year__c</fullName>
    <label>Grad Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>