unpackaged/main/default/objects/Lead/fields/hed__Area_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>hed__Area_Of_Interest__c</fullName>
    <description>The Lead&#39;s area of interest, such as a program, degree, or concentration.</description>
    <inlineHelpText>The Lead&#39;s area of interest, such as a program, degree, or concentration.</inlineHelpText>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>