unpackaged/main/default/objects/Lead/fields/hed__Preferred_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Preferred_Enrollment_Date__c</fullName>
    <description>The Lead&#39;s preferred enrollment date.</description>
    <label>Preferred Enrollment Date</label>
    <type>Date</type>
</CustomField>