unpackaged/main/default/objects/Lead/fields/hed__SSN__c.field-meta.xml
<CustomField>
    <fullName>hed__SSN__c</fullName>
    <description>The Lead&#39;s Social Security Number. Encrypted for confidentiality. Only users with the View Encrypted Data permission can see the unencrypted value.</description>
    <label>Social Security Number</label>
    <length>12</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>