unpackaged/main/default/objects/Lead/fields/hed__Undergraduate_Major__c.field-meta.xml
<CustomField>
    <fullName>hed__Undergraduate_Major__c</fullName>
    <description>The primary field of study for the Lead&#39;s undergraduate degree.</description>
    <label>Undergraduate Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>