unpackaged/main/default/objects/Lead/fields/High_School_Name__c.field-meta.xml
<CustomField>
    <fullName>High_School_Name__c</fullName>
    <label>High School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>