unpackaged/main/default/objects/Lead/fields/HS_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Code__c</fullName>
    <label>HS Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>