unpackaged/main/default/objects/Lead/fields/I_plan_to_graduate_in__c.field-meta.xml
<CustomField>
    <fullName>I_plan_to_graduate_in__c</fullName>
    <description>High School Grad Year</description>
    <label>I plan to graduate in</label>
    <type>Date</type>
</CustomField>