unpackaged/main/default/objects/Lead/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <label>IndividualId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>