unpackaged/main/default/objects/Lead/fields/MAJ1__c.field-meta.xml
<CustomField>
    <fullName>MAJ1__c</fullName>
    <description>Uses CIP codes</description>
    <label>MAJ1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>