unpackaged/main/default/objects/Lead/fields/MAJ2__c.field-meta.xml
<CustomField>
    <fullName>MAJ2__c</fullName>
    <description>Uses CIP codes</description>
    <label>MAJ2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>