unpackaged/main/default/objects/Lead/fields/MAJ3__c.field-meta.xml
<CustomField>
    <fullName>MAJ3__c</fullName>
    <description>Uses CIP codes</description>
    <label>MAJ3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>