unpackaged/main/default/objects/Lead/fields/Meta_Major__c.field-meta.xml
<CustomField>
    <fullName>Meta_Major__c</fullName>
    <description>Maps to Opportunity.Meta Major on Lead Conversion</description>
    <label>Meta Major</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts, Humanities, Communications, Design</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health Sciences</fullName>
            </value>
            <value>
                <fullName>Industry/Manufacturing and Construction</fullName>
            </value>
            <value>
                <fullName>Public Safety</fullName>
            </value>
            <value>
                <fullName>Science, Technology, Engineering, Mathematics</fullName>
            </value>
            <value>
                <fullName>Social and Behavioral Sciences, Human Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>