unpackaged/main/default/objects/Lead/fields/MI__c.field-meta.xml
<CustomField>
    <fullName>MI__c</fullName>
    <description>Middle Initial</description>
    <label>MI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>