unpackaged/main/default/objects/Lead/fields/School_Code__c.field-meta.xml
<CustomField>
    <fullName>School_Code__c</fullName>
    <description>Used as unique identifier to find related High School Account record in automation</description>
    <label>School Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>