unpackaged/main/default/objects/Lead/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <description>Used in Lead Conversion on Inquiry Form from Pardot</description>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School in Miami Dade County</fullName>
            </value>
            <value>
                <fullName>Other High School in Florida</fullName>
            </value>
            <value>
                <fullName>Other High School in the USA</fullName>
            </value>
            <value>
                <fullName>High School Outside the USA</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Home School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>