unpackaged/main/default/objects/Lead/fields/simplesms__Country_Phone_Prefix__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Country_Phone_Prefix__c</fullName>
    <label>Country Phone Prefix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>