unpackaged/main/default/objects/Lead/fields/simplesms__DoNotSMS__c.field-meta.xml
<CustomField>
    <fullName>simplesms__DoNotSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Messages will not be sent to this Lead.</description>
    <inlineHelpText>Messages will not be sent to this Lead.</inlineHelpText>
    <label>Do Not SMS</label>
    <type>Checkbox</type>
</CustomField>