unpackaged/main/default/objects/Lead/fields/Term_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Term_Short_Name__c</fullName>
    <description>Used in Lead Conversion flow to populate Term and Close Date on Opp</description>
    <label>Term Short Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>