unpackaged/main/default/objects/Lead/fields/traa_Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>traa_Academic_Program__c</fullName>
    <label>Academic Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master of Education</fullName>
            </value>
            <value>
                <fullName>Master of Arts in Special Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>