unpackaged/main/default/objects/Lead/fields/traa_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>traa_Area_of_Interest__c</fullName>
    <label>Area of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>