unpackaged/main/default/objects/Lead/fields/traa_Dual_Degree_Sec_Program_Interest__c.field-meta.xml
<CustomField>
    <fullName>traa_Dual_Degree_Sec_Program_Interest__c</fullName>
    <description>Contains the dual degree academic program.</description>
    <label>Dual Degree Secondary Program Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>