unpackaged/main/default/objects/Lead/fields/traa_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>traa_Lead_Score__c</fullName>
    <description>This field stores calculated Lead Score</description>
    <formula>IF( ISBLANK( traa_Program_of_Interest__c )  &amp;&amp;  ISBLANK( Email ), &#39;C&#39; , 
   IF( NOT(ISBLANK( traa_Program_of_Interest__c )) &amp;&amp;  NOT(ISBLANK( Email )), &#39;A&#39; ,  &#39;B&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated Lead Score</inlineHelpText>
    <label>Lead Score</label>
    <type>Text</type>
</CustomField>