unpackaged/main/default/objects/Lead/fields/traa_Level__c.field-meta.xml
<CustomField>
    <fullName>traa_Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Bachelor</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Doctoral</fullName>
            </value>
            <value>
                <fullName>Non-Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>