unpackaged/main/default/objects/Lead/fields/traa_Other_Program_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>traa_Other_Program_of_Interest__c</fullName>
    <inlineHelpText>Used to capture other academic program admissions cycle account records, other than Program Of Interest. The picklist value must match an academic program account record to automatically populate the Other academic program on the opportunity on lead conversion.</inlineHelpText>
    <label>Other Program of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>