unpackaged/main/default/objects/Lead/fields/traa_Program_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>traa_Program_of_Interest__c</fullName>
    <description>This field is used to capture the primary program of interest of a lead. There should only be one program of interest that corresponds to an Academic Program&#39;s Admissions Cycle.</description>
    <inlineHelpText>Used to capture one academic program admissions cycle account record. The free-form text must match a academic program account record to automatically populate  the academic program of an opportunity on lead conversion.</inlineHelpText>
    <label>Program of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>