unpackaged/main/default/objects/Lead/fields/traa_Start_Term__c.field-meta.xml
<CustomField>
    <fullName>traa_Start_Term__c</fullName>
    <label>Start Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2237</fullName>
            </value>
            <value>
                <fullName>2243</fullName>
            </value>
            <value>
                <fullName>2245</fullName>
            </value>
            <value>
                <fullName>2247</fullName>
            </value>
            <value>
                <fullName>2253</fullName>
            </value>
            <value>
                <fullName>2255</fullName>
            </value>
            <value>
                <fullName>2257</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>