unpackaged/main/default/objects/Lead/recordTypes/traa_Admissions_Prospect.recordType-meta.xml
<RecordType>
    <fullName>traa_Admissions_Prospect</fullName>
    <active>true</active>
    <businessProcess>Admissions Prospect</businessProcess>
    <label>Admissions Prospect</label>
</RecordType>